fixed layout on tablets

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ h1, h2, h3, h4, h5 {
   background-image: linear-gradient(45deg, #7C1D21 0%, #99141A 99%, #C52B3E 100%);
   /* background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%); */
 }
-  @media only screen and (max-height: 700px) {
+  @media only screen and (max-height: 300px) {
     .dof-cover {
       height: 300vh;
     }
